--- a/back/pom.xml
+++ b/back/pom.xml
@@ -105,6 +105,12 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*com/openclassrooms/starterjwt/dto*/**</exclude>
+						<exclude>**/*com/openclassrooms/starterjwt/mapper*/**</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -119,7 +125,6 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
-
 					<execution>
 						<id>jacoco-check</id>
 						<goals>
